Revert omnibus H2 server and dropwizard 5.0.1